fixed spacing issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,40 @@
   --blackish: #212121;
   --icon-gray: #afb1b8;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+html {
+  box-sizing: border-box;
+}
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+address {
+  font-style: normal;
+}
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -28,7 +61,6 @@ li {
   list-style: none;
 }
 header {
-  padding: 20px 0;
   border-bottom: 1px solid var(--light-gray2);
 }
 .nav-container {
@@ -52,11 +84,16 @@ nav {
   margin-right: 50px;
 }
 
+.nav-links-list li a {
+  padding: 24px 0;
+  display: block;
+}
+
 .nav-info {
   display: flex;
 }
 .nav-info li:last-child {
-  margin-left: 15px;
+  margin-left: 30px;
 }
 .nav-info li a {
   display: flex;
@@ -97,6 +134,8 @@ nav {
   text-decoration: none;
   font-size: 14px;
   font-weight: 500;
+  display: block;
+  padding: 24px 0;
 }
 .nav-text-info:hover,
 .nav-text-info:focus {
@@ -156,10 +195,13 @@ nav {
   display: flex;
 }
 .content-text-container {
-  margin: 0 15px;
   width: 270px;
 }
+.content-text-container:not(:last-child) {
+  margin-right: 30px;
+}
 .content-title {
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -195,8 +237,10 @@ nav {
   display: flex;
 }
 .wwd-container li {
-  margin-right: 30px;
   flex-basis: calc(100% / 3 - 30px);
+}
+.wwd-container li:not(:last-child) {
+  margin-right: 30px;
 }
 
 .our-team-container {
@@ -217,6 +261,9 @@ nav {
 .our-team-content-container li {
   margin-right: 30px;
   flex-basis: calc(100% / 4 - 30px);
+}
+.our-team-content-container li:not(:last-child) {
+  margin-right: 30px;
 }
 .our-team-card {
   background-color: var(--white);
@@ -310,7 +357,7 @@ nav {
 .product-buttons {
   background-color: var(--honey);
   font-family: "Roboto";
-  font-weight: 500px;
+  font-weight: 500;
   font-size: 16px;
   padding: 6px 26px;
   border: none;
@@ -402,7 +449,6 @@ img {
   padding: 0 15px;
   display: flex;
   justify-content: left;
-  align-items: center;
 }
 .social-text {
   font-family: "Roboto";
@@ -413,6 +459,8 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--white);
+  margin: 10px 0;
+  display: block;
 }
 .social-content {
   margin-left: 70px;
@@ -436,6 +484,7 @@ img {
 }
 .circle:hover {
   background: var(--blue);
+  cursor: pointer;
 }
 .our-team-social {
   display: flex;
@@ -460,17 +509,24 @@ img {
 }
 .our-team-social-circle:hover {
   background: var(--blue);
+  cursor: pointer;
 }
 .our-team-social-circle:hover img {
   filter: brightness(0) saturate(100%) invert(94%) sepia(94%) saturate(0%)
     hue-rotate(108deg) brightness(103%) contrast(104%);
+  cursor: pointer;
 }
 .content-img-container {
   margin-bottom: 30px;
   width: 270px;
   height: 120px;
+  border-radius: 4px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: var(--honey);
+}
+.content-img-container svg {
+  width: 70px;
+  height: 70px;
 }
